--- a/README
+++ b/README
@@ -3,13 +3,30 @@
 需要依赖的是gbase的gci驱动
 部署方式：
 1. 首先搭建好gbase 8s数据库，根据gci教程下载gci驱动并配置环境变量
+
 2. 拉取本项目，执行./configure 指令自动配置环境变量，生成makefile文件。
-由于笔者水平有限，不会修改脚本自动适配gbase，所以需要手动修改makefile的部分内容。
+  由于笔者水平有限，不会修改脚本自动适配gbase，所以需要手动修改makefile的部分内容。
 
+  ![2024-06-13 15-27-15 的屏幕截图](2024-06-13 15-27-15 的屏幕截图.png)
 
-  ./configure
+![2024-06-13 15-27-28 的屏幕截图](2024-06-13 15-27-28 的屏幕截图.png)
+
+打开makefile中的oracle部分的注释，如上面两张图所示
+
+ ![2024-06-13 15-27-38 的屏幕截图](2024-06-13 15-27-38 的屏幕截图.png)
+
+修改DBLDFLAGS和LDFLAGS两个变量，将gci的依赖libclntsh（该依赖已事先复制到系统路径/usr/lib/x86_64-linux-gnu）加入其中
+
+![2024-06-13 15-27-56 的屏幕截图](2024-06-13 15-27-56 的屏幕截图.png)
+
+注意设置HAVE_ORACLE 1，该文件位于src/xconfig.h中
+
+3. 依次执行下面两个指令即可编译生成zdb
+
   make
   make install 
-oracle://127.0.0.1:9088/db_node0?user=gbasedbt&password=0114 
+
+如您有疑问和进一步需求，可联系我
+2497213126@qq.com
 
 
